src/main/java/io/github/jhipster/sample/web/rest/errors/LoginAlreadyUsedException.java
package io.github.jhipster.sample.web.rest.errors;

public class LoginAlreadyUsedException extends BadRequestAlertException {

    public LoginAlreadyUsedException() {
        super(ErrorConstants.LOGIN_ALREADY_USED_TYPE, "Login already in use", "userManagement", "userexists");
    }
}
